tests/compile_fail/invalid_container_condition_list_literal.rs
use surgeist_style::ContainerConditionList;

fn main() {
    let _list = ContainerConditionList {
        conditions: Vec::new(),
    };
}
