tests/compile_fail/invalid_container_condition_list_literal.stderr
error[E0451]: field `conditions` of struct `ContainerConditionList` is private
 --> tests/compile_fail/invalid_container_condition_list_literal.rs:5:9
  |
4 |     let _list = ContainerConditionList {
  |                 ---------------------- in this type
5 |         conditions: Vec::new(),
  |         ^^^^^^^^^^ private field
